--- a/index.html
+++ b/index.html
@@ -3,62 +3,154 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>추가매수 간단 계산기</title>
+<title>리원 추가매수 간단 계산기 · KRW</title>
+
+<!-- PWA -->
 <link rel="manifest" href="manifest.json" />
+<link rel="icon" href="icon-192.png" />
 <script>
   if ('serviceWorker' in navigator) {
     window.addEventListener('load', () => navigator.serviceWorker.register('sw.js'));
   }
 </script>
+
 <style>
-  body {font-family: Arial, sans-serif; padding:20px; max-width:820px; margin:auto;}
-  header { display:flex; align-items:center; justify-content:space-between; margin-bottom:16px; }
-  header h1 { font-size:18px; margin:0; }
-  .pos { color:#0a7a0a; font-weight:bold; }
-  .neg { color:#c72626; font-weight:bold; }
-  fieldset { border:1px solid #ccc; padding:12px; margin:14px 0; border-radius:8px; }
-  legend { font-weight:bold; }
-  input, select { width:100%; padding:8px; margin-top:4px; }
-  button { width:100%; padding:12px; margin-top:10px; background:#111; color:#fff; border:none; border-radius:6px; }
-  .cards { display:grid; grid-template-columns:1fr 1fr; gap:16px; margin-top:16px; }
-  .card { border:1px solid #aaa; border-radius:8px; padding:12px; }
-  .kv { display:flex; justify-content:space-between; margin:4px 0; }
+  :root{
+    --bg:#fafbfc; --card:#ffffff; --bd:#e1e4e8; --text:#24292e; --muted:#6a737d;
+    --link:#0366d6; --pos:#22863a; --neg:#d73a49; --accent:#2ea44f;
+    --radius:12px; --gap:14px;
+  }
+  *{box-sizing:border-box}
+  body{
+    margin:0; padding:24px; max-width:980px; margin-inline:auto;
+    font-family: ui-sans-serif, -apple-system, "Segoe UI", Roboto, "Noto Sans KR", Arial;
+    color:var(--text); background:var(--bg);
+  }
+
+  /* README-style header */
+  .h1{font-size:28px; font-weight:900; margin:0 0 8px}
+  .hr{height:1px; background:#dfe2e5; border:0; margin:16px 0}
+  .badges{display:flex; gap:8px; flex-wrap:wrap; margin:6px 0 12px}
+  .badge{display:inline-flex; align-items:center; gap:6px; padding:6px 10px; border:1px solid var(--bd);
+    background:#f6f8fa; color:#24292e; border-radius:999px; font-size:12px; font-weight:700}
+  .badge.ghost{background:#fff}
+
+  /* sections */
+  .section-title{display:flex; align-items:center; gap:8px; font-size:18px; font-weight:800; margin:18px 0 8px}
+  .note{color:var(--muted); font-size:12px}
+
+  /* inputs card */
+  fieldset{
+    border:1px solid var(--bd); border-radius:var(--radius);
+    background:var(--card); padding:14px; margin:10px 0;
+  }
+  legend{font-weight:800; color:#24292e; padding:0 6px}
+  label{display:block; margin:10px 0 6px; font-weight:600}
+  input{
+    width:100%; padding:10px; border:1px solid var(--bd); border-radius:8px; background:#fff; outline:none;
+  }
+  input:focus{border-color:#79b8ff; box-shadow:0 0 0 3px rgba(3,102,214,.15)}
+  .grid{display:grid; grid-template-columns:1fr 1fr; gap:var(--gap)}
+  @media (max-width:760px){ .grid{grid-template-columns:1fr} }
+
+  /* button */
+  .btn{
+    width:100%; margin-top:10px; padding:12px; border-radius:8px; border:1px solid #2c974b;
+    background:linear-gradient(#34d058,#28a745); color:#fff; font-weight:800; cursor:pointer;
+  }
+  .btn:active{transform:translateY(1px)}
+
+  /* result cards */
+  .cards{display:grid; grid-template-columns:1fr 1fr; gap:var(--gap); margin-top:var(--gap)}
+  @media (max-width:760px){ .cards{grid-template-columns:1fr} }
+  .card{
+    border:1px solid var(--bd); border-radius:var(--radius); background:var(--card);
+    padding:14px;
+  }
+  .card h3{margin:0 0 8px; font-size:16px}
+  .kv{display:flex; justify-content:space-between; padding:8px 0; border-bottom:1px dashed var(--bd)}
+  .kv:last-child{border-bottom:none}
+  .pos{color:var(--pos); font-weight:800}
+  .neg{color:var(--neg); font-weight:800}
+  .pill{
+    display:inline-block; min-width:108px; text-align:center; padding:6px 10px; border-radius:999px;
+    border:1px solid var(--bd); background:#fff; font-weight:800;
+  }
+  .pill.pos{color:var(--pos)}
+  .pill.neg{color:var(--neg)}
+
+  .warn{color:var(--neg); font-weight:800; white-space:pre-line; margin-top:8px}
 </style>
 </head>
 <body>
-<header>
-  <h1><span id="coinLabel">코인명</span> <small id="unitLabel">(KRW)</small></h1>
-  <div>
-    <div id="topPnL">-</div>
-    <small id="topRoi">-</small>
+
+<!-- README 스타일 헤더 -->
+<div class="h1">리원 추가매수 간단 계산기 👋</div>
+<div class="badges">
+  <span class="badge">KRW 전용</span>
+  <span class="badge">오프라인 지원</span>
+  <span class="badge ghost">PWA</span>
+  <span class="badge ghost">No Backend</span>
+</div>
+<div class="hr"></div>
+
+<!-- 상단 KPI (입력값 기준) -->
+<div class="section-title">📊 현재 손익 요약</div>
+<div class="badges" style="margin-top:0">
+  <span id="topPnL" class="pill">손익 -</span>
+  <span id="topRoi" class="pill">수익률 -</span>
+</div>
+
+<!-- 입력 섹션 -->
+<div class="section-title">📦 보유 정보</div>
+<fieldset>
+  <legend>입력값</legend>
+  <div class="grid">
+    <div>
+      <label>코인명</label>
+      <input id="coin" placeholder="예) WLFI">
+    </div>
+    <div>
+      <label>보유수량 *</label>
+      <input id="holdQty" type="number" inputmode="decimal" step="any" placeholder="예) 3092.4437">
+    </div>
   </div>
-</header>
-<fieldset>
-  <legend>보유 정보</legend>
-  <label>코인명</label>
-  <input id="coin" placeholder="예) WLFI" />
-  <label>보유수량 *</label>
-  <input id="holdQty" type="number" step="any" />
-  <label>매수평균가 *</label>
-  <input id="holdAvg" type="number" step="any" />
-  <label>단위 *</label>
-  <select id="unit"><option value="KRW">KRW</option><option value="USD">USD</option></select>
-  <label>현재가 *</label>
-  <input id="now" type="number" step="any" />
+  <div class="grid">
+    <div>
+      <label>매수평균가 (KRW) *</label>
+      <input id="holdAvg" type="number" inputmode="decimal" step="any" placeholder="예) 279.3">
+    </div>
+    <div>
+      <label>현재가 (KRW) *</label>
+      <input id="now" type="number" inputmode="decimal" step="any" placeholder="예) 282">
+    </div>
+  </div>
 </fieldset>
+
+<div class="section-title">➕ 추가매수</div>
 <fieldset>
-  <legend>추가매수</legend>
-  <label>추가매수 단가 *</label>
-  <input id="addPrice" type="number" step="any" />
-  <label>추가매수 수량 (선택)</label>
-  <input id="addQty" type="number" step="any" />
-  <label>추가매수 매수금액 (선택)</label>
-  <input id="addInvest" type="number" step="any" />
-  <button id="calcBtn">계산하기</button>
+  <legend>입력값2</legend>
+  <div class="grid">
+    <div>
+      <label>추가매수 단가 (KRW) *</label>
+      <input id="addPrice" type="number" inputmode="decimal" step="any" placeholder="예) 270">
+    </div>
+    <div>
+      <label>추가매수 수량 (선택)</label>
+      <input id="addQty" type="number" inputmode="decimal" step="any" placeholder="수량 또는 아래 금액 중 하나">
+    </div>
+  </div>
+  <label>추가매수 매수금액 (선택, KRW)</label>
+  <input id="addInvest" type="number" inputmode="decimal" step="any" placeholder="금액 입력 시 수량 자동 계산">
+  <button class="btn" id="calcBtn">계산하기</button>
+  <div id="warn" class="warn" style="display:none;"></div>
+  <div class="note">※ 수량/금액 중 하나만 입력해도 됩니다. 둘 다 입력 시 <b>금액</b> 우선.</div>
 </fieldset>
+
+<div class="section-title">📈 결과</div>
 <div class="cards">
   <div class="card">
-    <h3>추가매수 전</h3>
+    <h3>추가매수 전 (입력값)</h3>
     <div class="kv"><span>보유수량</span><b id="bQty">-</b></div>
     <div class="kv"><span>매수평균가</span><b id="bAvg">-</b></div>
     <div class="kv"><span>매수금액</span><b id="bInvest">-</b></div>
@@ -67,7 +159,7 @@
     <div class="kv"><span>수익률</span><b id="bRoi">-</b></div>
   </div>
   <div class="card">
-    <h3>추가매수 후</h3>
+    <h3>추가매수 후 (변경값)</h3>
     <div class="kv"><span>보유수량</span><b id="aQty">-</b></div>
     <div class="kv"><span>매수평균가</span><b id="aAvg">-</b></div>
     <div class="kv"><span>매수금액</span><b id="aInvest">-</b></div>
@@ -76,25 +168,88 @@
     <div class="kv"><span>수익률</span><b id="aRoi">-</b></div>
   </div>
 </div>
+
 <script>
-const $=id=>document.getElementById(id);
-function signed(v,u){const cls=v>=0?'pos':'neg';const sign=v>=0?'+':'';return `<span class="${cls}">${sign}${v.toLocaleString()} ${u}</span>`;}
-function signedPct(p){const cls=p>=0?'pos':'neg';const sign=p>=0?'+':'';return `<span class="${cls}">${sign}${p.toFixed(2)} %</span>`;}
-function calc(){
-  const coin=$('coin').value||'코인명';
-  const unit=$('unit').value; $('coinLabel').textContent=coin; $('unitLabel').textContent=`(${unit})`;
-  const holdQty=+$('holdQty').value, holdAvg=+$('holdAvg').value, now=+$('now').value;
-  const addPrice=+$('addPrice').value, addQtyI=+$('addQty').value, addInvI=+$('addInvest').value;
-  if(!holdQty||!holdAvg||!now||!addPrice)return;
-  let addQty=0, addInv=0;
-  if(addInvI>0){addInv=addInvI;addQty=addInv/addPrice;} else if(addQtyI>0){addQty=addQtyI;addInv=addQty*addPrice;} else return;
-  const bInv=holdQty*holdAvg, bEval=holdQty*now, bPnL=bEval-bInv, bRoi=bInv?(bPnL/bInv*100):0;
-  $('topPnL').innerHTML=signed(bPnL,unit); $('topRoi').innerHTML=signedPct(bRoi);
-  $('bQty').textContent=holdQty; $('bAvg').textContent=holdAvg+" "+unit; $('bInvest').textContent=bInv+" "+unit; $('bEval').textContent=bEval+" "+unit; $('bPnL').innerHTML=signed(bPnL,unit); $('bRoi').innerHTML=signedPct(bRoi);
-  const aQty=holdQty+addQty, aInv=bInv+addInv, aAvg=aQty?aInv/aQty:0, aEval=aQty*now, aPnL=aEval-aInv, aRoi=aInv?(aPnL/aInv*100):0;
-  $('aQty').textContent=aQty.toFixed(4); $('aAvg').textContent=aAvg.toFixed(2)+" "+unit; $('aInvest').textContent=aInv+" "+unit; $('aEval').textContent=aEval+" "+unit; $('aPnL').innerHTML=signed(aPnL,unit); $('aRoi').innerHTML=signedPct(aRoi);
-}
-$('calcBtn').addEventListener('click',calc);
+  const $ = (id) => document.getElementById(id);
+  const money = (v) => `${Number(v).toLocaleString()} KRW`;
+  const qtyFmt = (v) => Number(v).toLocaleString(undefined,{maximumFractionDigits:4});
+  const signed = (v) => {
+    const cls = v >= 0 ? 'pos' : 'neg';
+    const sign = v >= 0 ? '+' : '';
+    return `<span class="${cls}">${sign}${Number(v).toLocaleString()} KRW</span>`;
+  };
+  const signedPct = (p) => {
+    const cls = p >= 0 ? 'pos' : 'neg';
+    const sign = p >= 0 ? '+' : '';
+    return `<span class="${cls}">${sign}${Number(p).toFixed(2)} %</span>`;
+  };
+  const pillClass = (v) => v >= 0 ? 'pill pos' : 'pill neg';
+
+  function calc(){
+    const holdQty = +$('holdQty').value;
+    const holdAvg = +$('holdAvg').value;
+    const now     = +$('now').value;
+    const addPrice= +$('addPrice').value;
+    const addQtyI = +$('addQty').value;
+    const addInvI = +$('addInvest').value;
+
+    const warnings = [];
+    if(!holdQty || !holdAvg || !now || !addPrice) warnings.push('보유수량/매수평균가/현재가/추가매수 단가는 필수입니다.');
+    let addQty=0, addInv=0;
+    if(addInvI>0){ addInv=addInvI; addQty=addInv/addPrice; }
+    else if(addQtyI>0){ addQty=addQtyI; addInv=addQty*addPrice; }
+    else warnings.push('추가매수 수량 또는 매수금액 중 하나를 입력하세요.');
+
+    if(warnings.length){
+      $('warn').style.display='block';
+      $('warn').textContent = warnings.join('\\n');
+      return;
+    }else{
+      $('warn').style.display='none';
+      $('warn').textContent = '';
+    }
+
+    // BEFORE
+    const bInv = holdQty * holdAvg;
+    const bEval= holdQty * now;
+    const bPnL = bEval - bInv;
+    const bRoi = bInv ? (bPnL / bInv) * 100 : 0;
+
+    $('topPnL').className = pillClass(bPnL);
+    $('topPnL').textContent = `손익 ${Number(bPnL).toLocaleString()} KRW`;
+    $('topRoi').className = pillClass(bRoi);
+    $('topRoi').textContent = `수익률 ${bRoi.toFixed(2)}%`;
+
+    $('bQty').textContent = `${qtyFmt(holdQty)} 개`;
+    $('bAvg').textContent = money(holdAvg);
+    $('bInvest').textContent = money(bInv);
+    $('bEval').textContent = money(bEval);
+    $('bPnL').innerHTML = signed(bPnL);
+    $('bRoi').innerHTML = signedPct(bRoi);
+
+    // AFTER
+    const aQty = holdQty + addQty;
+    const aInv = bInv + addInv;
+    const aAvg = aQty ? aInv / aQty : 0;
+    const aEval= aQty * now;
+    const aPnL = aEval - aInv;
+    const aRoi = aInv ? (aPnL / aInv) * 100 : 0;
+
+    $('aQty').textContent = `${qtyFmt(aQty)} 개`;
+    $('aAvg').textContent = money(aAvg.toFixed(2));
+    $('aInvest').textContent = money(aInv);
+    $('aEval').textContent = money(aEval);
+    $('aPnL').innerHTML = signed(aPnL);
+    $('aRoi').innerHTML = signedPct(aRoi);
+  }
+
+  // 입력 즉시 계산 + 버튼
+  ['coin','holdQty','holdAvg','now','addPrice','addQty','addInvest'].forEach(id=>{
+    $(id).addEventListener('input', calc);
+    $(id).addEventListener('change', calc);
+  });
+  $('calcBtn').addEventListener('click', calc);
+  calc();
 </script>
 </body>
 </html>
